@@ -88,6 +88,7 @@ Thierry DELHAISE <thierry.delhaise@delhaise.com>
 Thierry Laronde <thierry.laronde@polynum.com>
 Thomas Schweikle <tschweikle@fiducia.de>
 Torsten Duwe <duwe@caldera.de>
+Uwe Dannowski <ud3@ira.uka.de>
 VaX#n8 <vax@linkdead.paranoia.com>
 Vesa Jaaskelainen <jaaskela@tietomyrsky.fi>
 Yedidyah Bar-David <didi@post.tau.ac.il>
